--- a/guides/nes.html
+++ b/guides/nes.html
@@ -30,6 +30,9 @@ editor: undefined
 </ol>
 <h2>Videos</h2>
 <p><a href="https://www.twitch.tv/videos/40578134">GreenDeathFlavor's overview of mechanics and strategies employed in an any% run.</a></p>
+<figure class="media">
+  <iframe src="https://player.twitch.tv/?video=40578134&parent=smb2speedrunwiki.davesies.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+</figure>
 <h1>All Levels</h1>
 <h3>Rules</h3>
 <ol>
