--- a/list-of-levels/world-1/1-3.html
+++ b/list-of-levels/world-1/1-3.html
@@ -16,7 +16,7 @@ editor: undefined
 </figure>
 <p><a href="https://www.youtube.com/watch?v=9FnD5wjpwSo">Example playthrough by CAK (warpless)</a></p>
 <figure class="media">
-  <oembed url="https://www.youtube.com/watch?v=9FnD5wjpwSo"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/9FnD5wjpwSo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
 <h2>All Stars Version</h2>
 <p>TODO</p>
