--- a/list-of-levels/world-4/4-2.html
+++ b/list-of-levels/world-4/4-2.html
@@ -11,11 +11,11 @@ editor: undefined
 <h3>Videos</h3>
 <p><a href="https://www.youtube.com/watch?v=N_z4i82OfkM">Example Toad playthrough by CAK (warps)</a></p>
 <figure class="media">
-  <oembed url="https://www.youtube.com/watch?v=N_z4i82OfkM"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/N_z4i82OfkM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
 <p><a href="https://www.youtube.com/watch?v=nzwxaqwbNKI">Example Toad playthrough by CAK (warpless)</a></p>
 <figure class="media">
-  <oembed url="https://www.youtube.com/watch?v=nzwxaqwbNKI"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/nzwxaqwbNKI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
 <h2>All Stars Version</h2>
 <p>TODO</p>
