--- a/list-of-levels/world-6/6-1.html
+++ b/list-of-levels/world-6/6-1.html
@@ -12,11 +12,11 @@ editor: undefined
 <h3>Videos</h3>
 <p><a href="https://www.youtube.com/watch?v=iHXVRB82u0I">Roopert83's guide to 6-1</a></p>
 <figure class="media">
-  <oembed url="https://www.youtube.com/watch?v=iHXVRB82u0I"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/iHXVRB82u0I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
 <p><a href="https://www.youtube.com/watch?v=kz6uv3H5WXg">Example Toad playthrough by CAK</a></p>
 <figure class="media">
-  <oembed url="https://www.youtube.com/watch?v=kz6uv3H5WXg"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/kz6uv3H5WXg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
 <h2>All Stars Version</h2>
 <p>TODO</p>
