--- a/list-of-levels/world-6/6-2.html
+++ b/list-of-levels/world-6/6-2.html
@@ -12,7 +12,7 @@ editor: undefined
 <h3>Videos</h3>
 <p><a href="https://www.youtube.com/watch?v=pxZ4Oq03EdI">Example Luigi playthrough by CAK</a></p>
 <figure class="media">
-  <oembed url="https://www.youtube.com/watch?v=pxZ4Oq03EdI"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/pxZ4Oq03EdI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
 <h2>All Stars Version</h2>
 <p>TODO</p>
