--- a/list-of-levels/world-6/6-3.html
+++ b/list-of-levels/world-6/6-3.html
@@ -12,11 +12,11 @@ editor: undefined
 <h3>Videos</h3>
 <p><a href="https://www.youtube.com/watch?v=7P5NlfCuZD8">Roopert83's guide to 6-3</a></p>
 <figure class="media">
-  <oembed url="https://www.youtube.com/watch?v=7P5NlfCuZD8"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/7P5NlfCuZD8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
 <p><a href="https://www.youtube.com/watch?v=TgUodiPzFSM">Example Luigi playthrough by CAK</a></p>
 <figure class="media">
-  <oembed url="https://www.youtube.com/watch?v=TgUodiPzFSM"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/TgUodiPzFSM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
 <h2>All Stars Version</h2>
 <p>TODO</p>
