--- a/list-of-levels/world-1/1-3.html
+++ b/list-of-levels/world-1/1-3.html
@@ -12,7 +12,7 @@ editor: undefined
 <h3>Videos</h3>
 <p><a href="https://www.youtube.com/watch?v=kBHN_cH4E8M">Example playthrough by CAK (warps)</a></p>
 <figure class="media">
-  <oembed url="https://www.youtube.com/watch?v=kBHN_cH4E8M"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/kBHN_cH4E8M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
 <p><a href="https://www.youtube.com/watch?v=9FnD5wjpwSo">Example playthrough by CAK (warpless)</a></p>
 <figure class="media">
