--- a/list-of-levels/world-7/7-1.html
+++ b/list-of-levels/world-7/7-1.html
@@ -12,7 +12,7 @@ editor: undefined
 <h3>Videos</h3>
 <p><a href="https://www.youtube.com/watch?v=-D-olUq3Z30">Example Luigi playthrough by CAK</a></p>
 <figure class="media">
-  <oembed url="https://www.youtube.com/watch?v=-D-olUq3Z30"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/-D-olUq3Z30" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
 <h2>All Stars Version</h2>
 <p>TODO</p>
