--- a/list-of-levels/world-7/7-2.html
+++ b/list-of-levels/world-7/7-2.html
@@ -12,11 +12,11 @@ editor: undefined
 <h3>Videos</h3>
 <p><a href="https://www.youtube.com/watch?v=JW9kEdkNSxk">Roopert83's guide to 7-2</a></p>
 <figure class="media">
-  <oembed url="https://www.youtube.com/watch?v=JW9kEdkNSxk"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/JW9kEdkNSxk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
 <p><a href="https://www.youtube.com/watch?v=oCxLyK06Ltk">Example Toad playthrough by CAK</a></p>
 <figure class="media">
-  <oembed url="https://www.youtube.com/watch?v=oCxLyK06Ltk"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/oCxLyK06Ltk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
 <h2>All Stars Version</h2>
 <p>TODO</p>
