--- a/mechanics-and-glitches.html
+++ b/mechanics-and-glitches.html
@@ -17,3 +17,6 @@ editor: undefined
 <p><a href="/mechanics-and-glitches/fast-carpet">Fast Carpet Glitch</a></p>
 <h2>Tutorials</h2>
 <p><a href="https://www.twitch.tv/videos/40578134">GreenDeathFlavor's any% speedrun tutorial.</a> Goes over basics of movement as well as relevant glitches useful to speedrunners.</p>
+<figure class="media">
+  <iframe src="https://player.twitch.tv/?video=40578134&parent=smb2speedrunwiki.davesies.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+</figure>
