--- a/mechanics-and-glitches/double-jump.html
+++ b/mechanics-and-glitches/double-jump.html
@@ -10,6 +10,9 @@ editor: undefined
 <p>This is an NES-specific trick that can be performed by any character. When the character is moving towards an enemy, it's possible to jump such that the character passes through the enemy's bounding box but doesn't take damage. When intersecting the top of the enemy bounding box, the game behaves as though the character is standing on the enemy and allows for the character to jump again in midair within a certain number of frames of touching the enemy bounding box (TODO: exact # of frames to perform the second jump).</p>
 <p>This trick is used most notably in speedruns by Toad in 1-1 to jump up to reach the cave door and by Luigi in 6-2 to get extra jumps off of the Albatosses.</p>
 <h3>Videos</h3>
-<p><a href="https://www.youtube.com/watch?t=33&amp;v=A4NR00EyloQ">Example of the trick being used in 1-1 by Toad</a></p>
+<p><a href="https://youtu.be/A4NR00EyloQ?t=33">Example of the trick being performed with Toad in 1-1 by Coolkid</a></p>
+<figure class="media">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/A4NR00EyloQ?start=33" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</figure>
 <h3>More Info</h3>
 <p><a href="http://tasvideos.org/GameResources/NES/SuperMarioBros2.html#DoubleJump">TASVideos double jumping information</a></p>
