--- a/mechanics-and-glitches/fast-carpet.html
+++ b/mechanics-and-glitches/fast-carpet.html
@@ -18,9 +18,9 @@ editor: undefined
 <h3>Videos</h3>
 <p><a href="https://youtu.be/A4NR00EyloQ?t=59">Example of Toad performing the trick in level 1-2 by Coolkid</a></p>
 <figure class="media">
-  <oembed url="https://youtu.be/A4NR00EyloQ?t=59"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/A4NR00EyloQ?start=59" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
 <p><a href="https://youtu.be/8tQAYgY6SJU?t=960">Example of Toad performing this trick in level 5-3 by EthanRTA</a></p>
 <figure class="media">
-  <oembed url="https://youtu.be/8tQAYgY6SJU?t=960"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/8tQAYgY6SJU?start=960" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
