--- a/mechanics-and-glitches/ladder-clip.html
+++ b/mechanics-and-glitches/ladder-clip.html
@@ -23,6 +23,9 @@ editor: undefined
 </ol>
 <h3>Video</h3>
 <p><a href="https://youtu.be/wcjf4LC9BRk?t=35">Example of performing this trick using Toad in 1-1 by GreenDeathFlavor</a></p>
+<figure class="media">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/wcjf4LC9BRk?start=35" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</figure>
 <h2>Without Getting Hit First</h2>
 <p>This is a variation of this trick that requires a bit more precise timing to pull off, but can be faster with some characters, particularly Luigi due to his slow falling speed making it difficult to perform the normal version of the trick before running out of iframes.</p>
 <ol>
@@ -34,7 +37,10 @@ editor: undefined
   <li>If done correctly, the character will clip partially through the floor, and repeatedly pressing down will cause the character to move the rest of the way through the floor to perform the warp to the Birdo screen.</li>
 </ol>
 <h3>Video</h3>
-<p><a href="https://www.twitch.tv/videos/425729167?t=0h0m42s">Example of performing this trick using Luigi in 1-1 by Coolkid</a></p>
+<p><a href="https://www.twitch.tv/videos/425729167?t=0h0m37s">Example of performing this trick using Luigi in 1-1 by Coolkid</a></p>
+<figure class="media">
+  <iframe src="https://player.twitch.tv/?video=425729167&time=0h0m37s&parent=smb2speedrunwiki.davesies.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+</figure>
 <p>TODO: Make a video explaining how to do this version with an input display, since the specific input timing makes this much more difficult than the other version.</p>
 <h1>All Stars</h1>
 <p>TODO</p>
