--- a/mechanics-and-glitches/potion-jump.html
+++ b/mechanics-and-glitches/potion-jump.html
@@ -12,5 +12,5 @@ editor: undefined
 <h3>Videos</h3>
 <p><a href="https://youtu.be/A4NR00EyloQ?t=311">Example of the potion jump with Luigi by Coolkid</a></p>
 <figure class="media">
-  <oembed url="https://youtu.be/A4NR00EyloQ?t=311"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/A4NR00EyloQ?start=311" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
