--- a/mechanics-and-glitches/running-across-the-top.html
+++ b/mechanics-and-glitches/running-across-the-top.html
@@ -9,4 +9,7 @@ editor: undefined
 
 <p>During indoor levels that contain chains/ladders/vines, it's possible to <a href="/mechanics-and-glitches/vine-jump">Vine Jump</a> near the top of the screen while pressing left or right and make the character land on the ceiling of the level without moving to the next screen. At this point, the character can run across the top of the level. This has a few applications in runs, most notably in <a href="/list-of-levels/world-7/7-2">7-2</a> allowing players to skip most of the level.</p>
 <h3>Videos</h3>
-<p><a href="https://www.youtube.com/watch?t=433&amp;v=A4NR00EyloQ">Example of this trick being used in 7-2.</a></p>
+<p><a href="https://youtu.be/A4NR00EyloQ?t=433">Example of this trick being used in 7-2 by Coolkid</a></p>
+<figure class="media">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/A4NR00EyloQ?start=433" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</figure>
