--- a/mechanics-and-glitches/veggie-glitch.html
+++ b/mechanics-and-glitches/veggie-glitch.html
@@ -17,4 +17,10 @@ editor: undefined
 <p>The best-known application of this glitch is to carry a veggie into the Birdo screen on <a href="/list-of-levels/world-1/1-2">1-2</a> to kill Birdo more quickly. This glitch can also be used to pick up a POW block, which is used to perform the most advanced version of the <a href="/mechanics-and-glitches/ladder-clip">Ladder Clip</a> in <a href="/list-of-levels/world-1/1-1">1-1</a>.</p>
 <h3>Videos</h3>
 <p><a href="https://youtu.be/A4NR00EyloQ?t=70">Example of using this glitch to get a quick Birdo kill in 1-2 by Coolkid</a></p>
+<figure class="media">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/A4NR00EyloQ?start=70" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</figure>
 <p><a href="https://youtu.be/A4NR00EyloQ?t=20">Example of the advanced application of this trick in 1-1 by Coolkid</a></p>
+<figure class="media">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/A4NR00EyloQ?start=20" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</figure>
