--- a/mechanics-and-glitches/character-movement.html
+++ b/mechanics-and-glitches/character-movement.html
@@ -17,7 +17,7 @@ editor: ckeditor
 <h3>Video</h3>
 <p><a href="https://youtu.be/VjWQMiwkHVc?t=88">Example of this pause menu trick on 1-2 with Luigi by Coolkid</a></p>
 <figure class="media">
-  <oembed url="https://youtu.be/VjWQMiwkHVc?t=88"></oembed>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/VjWQMiwkHVc?start=88" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </figure>
 <h2>Movement on Ice</h2>
 <p>Since the character accelerates slower on ice than on normal surfaces, the fastest way to reach full speed is to jump immediately while moving to the right to take advantage of the quicker acceleration through the air than on the ice.</p>
